<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ui.addphoto.AddPhotoActivity">

    <RelativeLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/padding_medium"
            android:background="@drawable/btn_rounded"
            android:text="@string/choose_photo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_save_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/padding_medium"
            android:background="@drawable/btn_rounded"
            android:text="@string/save_photo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_button">

        <EditText
            android:id="@+id/et_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/caption"
            android:textAlignment="center"
            android:maxLines="2"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_caption"
            tools:ignore="ContentDescription"/>

    </RelativeLayout>

</RelativeLayout>